# taller-de-programacion-tp-final-grupo-4

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakeListsTemplate.txt  Desinstalar CS2D.desktop  Instalar CS2D.desktop  Makefile  README.md  cs2d_setup.sh  install.sh  make_client.sh  make_client_join.sh  make_server.sh  uninstall.sh
client/game/: CMakeLists.txt  app.h  application.cpp  application.h  assets.cpp  assets.h  clock.cpp  clock.h  controller.cpp  controller.h  counter_strike_app.cpp  counter_strike_app.h  cs2d_app.cpp  cs2d_app.h  definitions.h  periodic_clock.cpp  periodic_clock.h  sdl_controller.cpp  sdl_controller.h
client/game/animation/: animation.cpp  animation.h  animation_details.cpp  animation_details.h  animation_iterator.cpp  animation_iterator.h  bomb_explosion_animation.cpp  bomb_explosion_animation.h  framed_animation.cpp  framed_animation.h  interpolated_animation.cpp  interpolated_animation.h  iterative_animation.cpp  iterative_animation.h  muzzle_fire_animation.cpp  muzzle_fire_animation.h  progress_bar_animation.cpp  progress_bar_animation.h  winner_team_message_animation.cpp  winner_team_message_animation.h
client/game/asset/: animation_id.h  asset_addresser.cpp  asset_addresser.h  asset_generator.cpp  asset_generator.h  asset_loader.cpp  asset_loader.h  asset_manager.cpp  asset_manager.h  background_id.h  cursor_id.h  cursor_manager.cpp  cursor_manager.h  font_id.h  sound_id.h  texture_id.h
client/game/command/: base_command.cpp  base_command.h  buy_weapon_command.cpp  buy_weapon_command.h  composite_command.cpp  composite_command.h  pick_role_command.cpp  pick_role_command.h  pick_sprite_command.cpp  pick_sprite_command.h  quit_command.cpp  quit_command.h  switch_context_command.cpp  switch_context_command.h
client/game/context/: base_context.cpp  base_context.h  context_manager.cpp  context_manager.h  end_of_game_context.cpp  end_of_game_context.h  in_game_context.cpp  in_game_context.h  loading_context.cpp  loading_context.h  menu_context.cpp  menu_context.h  pick_role_context.cpp  pick_role_context.h  pick_sprite_context.cpp  pick_sprite_context.h  shop_context.cpp  shop_context.h  stats_context.cpp  stats_context.h
client/game/controller/: base_controller.cpp  base_controller.h  game_controller.cpp  game_controller.h  receiver.cpp  receiver.h  sender.cpp  sender.h  subsystem_manager.cpp  subsystem_manager.h
client/game/dto_handler/: dto_creator_visitor.cpp  dto_creator_visitor.h  event_dto_creator.cpp  event_dto_creator.h  game_state_updater.cpp  game_state_updater.h  player_dto_parser.cpp  player_dto_parser.h
client/game/entity/: aligner.cpp  aligner.h  background.cpp  background.h  button.cpp  button.h  entity.cpp  entity.h  entity_positioner.cpp  entity_positioner.h  exit_button.cpp  exit_button.h  gapped.h  horizontal_pane.cpp  horizontal_pane.h  label.cpp  label.h  padded.cpp  pane.cpp  pane.h  pick_sprite_button.cpp  pick_sprite_button.h  player.cpp  player.h  rect_entity.cpp  rect_entity.h  rendered.cpp  rendered.h  rotated.cpp  scalable.cpp  scalable.h  smart_pane.cpp  smart_pane.h  textured.h  vertical_pane.cpp  vertical_pane.h
client/game/enum/: enum_translator.cpp  enum_translator.h
client/game/event/: buy_ammo_event.cpp  buy_ammo_event.h  buy_weapon_event.cpp  buy_weapon_event.h  create_game_event.cpp  create_game_event.h  defuse_bomb_event.cpp  defuse_bomb_event.h  drop_weapon_event.cpp  drop_weapon_event.h  end_of_game_event.cpp  end_of_game_event.h  event.cpp  event.h  event_types.h  events.h  generate_map_event.cpp  generate_map_event.h  initialize_game_state_event.cpp  initialize_game_state_event.h  join_game_event.cpp  join_game_event.h  join_match_event.cpp  join_match_event.h  leave_game_event.cpp  leave_game_event.h  movement_event.cpp  movement_event.h  pick_role_event.cpp  pick_role_event.h  pick_sprite_event.cpp  pick_sprite_event.h  quit_event.cpp  quit_event.h  reload_event.cpp  reload_event.h  request_games_event.h  request_games_list.h  request_games_list_event.h  request_maps_event.cpp  (+30 more)
client/game/exception/: closed_window.h
client/game/functor/: scalator.cpp  scalator.h
client/game/handler/: callback.cpp  callback.h  event_handler_strategy.cpp  event_handler_strategy.h  game_handler.cpp  game_handler.h  game_state_manager.cpp  game_state_manager.h  handler_state.cpp  handler_state.h  in_game_event_handler_strategy.cpp  in_game_event_handler_strategy.h  keyboard_state_handler.cpp  keyboard_state_handler.h  menu_event_handler_strategy.cpp  menu_event_handler_strategy.h  mouse_movement_handler.cpp  mouse_movement_handler.h  mouse_state_handler.cpp  mouse_state_handler.h  movement_handler.cpp  movement_handler.h  pick_role_event_handler_strategy.cpp  pick_role_event_handler_strategy.h  sdl_event_handler.cpp  sdl_event_handler.h  sdl_event_handler_strategy.cpp  sdl_event_handler_strategy.h  shop_event_handler_strategy.cpp  shop_event_handler_strategy.h  state_handler.cpp  state_handler.h  stats_event_handler_strategy.cpp  stats_event_handler_strategy.h  weapon_handler.cpp  weapon_handler.h
client/game/interface/: fixed.cpp  fixed.h  gapped.cpp  padded.h  rendered.cpp  rotated.h  textured.cpp  transfered.h
client/game/model/: game_state.cpp  game_state.h  player.cpp  player.h  rendered_player.cpp  rendered_player.h
client/game/net/: event_sender.cpp  event_sender.h  game_state_receiver.cpp  game_state_receiver.h
client/game/render/: animation_renderer.cpp  animation_renderer.h  camera.cpp  camera.h  dropped_weapon_renderer.cpp  dropped_weapon_renderer.h  equipment_renderer.cpp  equipment_renderer.h  full_render_context.cpp  full_render_context.h  hud_renderer.cpp  hud_renderer.h  map_renderer.cpp  map_renderer.h  menu_renderer.cpp  menu_renderer.h  player_render_context.cpp  player_renderer.h  (+12 more)
client/lobby/: CMakeLists.txt  game_creation_scene.cpp  game_creation_scene.h  join_game_scene.cpp  join_game_scene.h  lobby_app.cpp  lobby_app.h  lobby_scene.cpp  lobby_scene.h  main_window.cpp  main_window.h  main_window.ui  resources.qrc  styled_button.h  welcome_scene.cpp  welcome_scene.h
(+272 files in other folders)
